# infiniteSphere

./: CMakeLists.txt  updatEngine.bat
backup/: main.cpp  sphere.frag  sphere.vert
backup/06.02 18.42 Uhr/: sphere.frag  sphere.vert
backup/06.02 18.42 Uhr/include/: Camera.h  GenerateTexture.h  InfiniteSphere.h  RenderNoisePlanetToTexture.h  ShaderProgram.h  main.h
backup/06.02 18.42 Uhr/src/: Camera.cpp  DRCubeTexture.cpp  GenerateTexture.cpp  InfiniteSphere.cpp  RenderNoisePlanetToTexture.cpp  RenderToTexture.cpp  main.cpp
backup/06.02 9.21 Uhr/: main.cpp  noise.frag  noise.vert  noise_little.frag  noise_little.vert  sphere.frag  sphere.vert
data/: config.ini
data/shader/: MipMap.vert  addTextures.frag  noise.frag  noise.vert  noise_little.frag  noise_little.vert  simple.vert  sphere.frag  sphere.vert  texture.frag
import/include/: DRIImage.h  DRInterface.h  DRIvlc.h  DRTextur.h  Engine2Main.h
import/include/Core2/: DRColor.h  DRDampingSpring.h  DRFile.h  DRFileManager.h  DRFrustumCulling.h  DRHash.hpp  DRHashList.hpp  DRIndexReferenzHolder.h  DRIni.h  DRLogger.h  DRMatrix.h  DRPlane.h  DRUtils.h  DRVector2.h  DRVector3.h
import/include/noise/: basictypes.h  exception.h  interp.h  latlon.h  mathconsts.h  misc.h
import/include/noise/model/: cylinder.h  line.h  model.h  plane.h
import/include/sdl/: SDL_config.h
include/: Camera.h  DRCubeTexture.h  DRGeometrieHeightfield.h  DRGeometrieManager.h  GenerateTexture.h  GlobalRenderer.h  InfiniteSphere.h  MipMapCubeTexture.h  MipMapTexture.h  RenderInStepsToTexture.h  RenderMipMapToTexture.h  RenderNoisePlanetToTexture.h  RenderToTexture.h  ShaderManager.h  ShaderProgram.h  Unit.h  Vector3Unit.h  main.h
src/: Camera.cpp  DRCubeTexture.cpp  DRGeometrieHeightfield.cpp  DRGeometrieManager.cpp  GenerateTexture.cpp  GlobalRenderer.cpp  InfiniteSphere.cpp  MipMapCubeTexture.cpp  MipMapTexture.cpp  RenderInStepsToTexture.cpp  RenderMipMapToTexture.cpp  RenderNoisePlanetToTexture.cpp  RenderToTexture.cpp  ShaderManager.cpp  ShaderProgram.cpp  Unit.cpp  main.cpp
